hvega/tests/specs/gallery/error/error2.vl
{
    "transform": [
        {
            "groupby": [
                "variety"
            ],
            "aggregate": [
                {
                    "op": "mean",
                    "as": "mean",
                    "field": "yield"
                },
                {
                    "op": "stdev",
                    "as": "stdev",
                    "field": "yield"
                }
            ]
        },
        {
            "as": "lower",
            "calculate": "datum.mean-datum.stdev"
        },
        {
            "as": "upper",
            "calculate": "datum.mean+datum.stdev"
        }
    ],
    "data": {
        "url": "https://vega.github.io/vega-lite/data/barley.json"
    },
    "$schema": "https://vega.github.io/schema/vega-lite/v3.json",
    "layer": [
        {
            "mark": {
                "type": "point",
                "filled": true
            },
            "encoding": {
                "color": {
                    "value": "black"
                },
                "x": {
                    "field": "mean",
                    "scale": {
                        "zero": false
                    },
                    "type": "quantitative",
                    "axis": {
                        "title": "Barley Yield"
                    }
                }
            }
        },
        {
            "mark": "rule",
            "encoding": {
                "x2": {
                    "field": "lower"
                },
                "x": {
                    "field": "upper",
                    "type": "quantitative"
                }
            }
        }
    ],
    "encoding": {
        "y": {
            "field": "variety",
            "type": "ordinal"
        }
    },
    "description": "Error bars showing standard deviations"
}